objects/COB__c.object
<CustomObject>
    <fields>
        <fullName>AccountRecordTypeCOB__c</fullName>
        <description>This field is used in workflow to pull down the Account Record type- US172</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeCOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK(Implementation_Record_ID__r.Account.Id,Implementation_Record_ID__r.Account.Name)</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Month_to_Solicit_COB__c</fullName>
        <inlineHelpText>If The Account Chooses To Have Anthem Solicit COB Once A Year In A Given Month, Please Indicate Month To Solicit</inlineHelpText>
        <label>Anthem Month To Solicit COB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard (Based on DOB or First Claim Received)</fullName>
                </value>
                <value>
                    <fullName>No COB for client, COB waived</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COB_Method_Apply_to_all__c</fullName>
        <label>COB Method Apply To All Packages/Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_or_Suffix_for_Annual_COB_Solicit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please indicate whether it is Case or Suffix level for Annual COB solicitation:
(Note to Group Service, Case level overrides suffix level)</inlineHelpText>
        <label>Case Or Suffix For Annual COB Solicit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Medicare_Part_D__c</fullName>
        <label>Change Medicare Part D Rx To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Creditable Coverage</fullName>
                </value>
                <value>
                    <fullName>Non-Creditable Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Intake_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Intake Process</label>
        <referenceTo>Client_Intake_Process__c</referenceTo>
        <relationshipName>ImpProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_COB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Medicare__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coordination_of_Benefits__c</fullName>
        <inlineHelpText>Please Send An Email To blueinfo@anthem.com When An Acct Changes To Pay And Pursue</inlineHelpText>
        <label>Coordination Of Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pay and Pursue</fullName>
                </value>
                <value>
                    <fullName>Pursue and Pay</fullName>
                </value>
                <value>
                    <fullName>Other (explain below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Me_Too_selection_apply_to_all_pkgs__c</fullName>
        <label>Does Me Too Selection Apply To All Pkgs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_Apply__c</fullName>
        <label>Does This Apply To All Subgroups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_from_Medicare_Crossover__c</fullName>
        <label>Exclude From Medicare Crossover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Coordination of Benefits</relationshipLabel>
        <relationshipName>Coordination_of_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>If_no_please_specify_per_package_which_M__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If No, Specify ME Too Indicator Per Package</inlineHelpText>
        <label>If No, Specify Me Too Per Package</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Record_ID__r.Implementation_Case_Name__c</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Record ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Coordination of Benefits</relationshipLabel>
        <relationshipName>Coordination_of_Benefits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_there_a_Waiting_Period_for_New_Hires__c</fullName>
        <label>Is There A Waiting Period For New Hires</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Me_Too_Indicator__c</fullName>
        <label>Me Too Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Higher R+C</fullName>
                </value>
                <value>
                    <fullName>L Hard or Soft Non Dup</fullName>
                </value>
                <value>
                    <fullName>I Up to Anthem&apos;s Allowed</fullName>
                </value>
                <value>
                    <fullName>D Total Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_Applies_to_Packages_Suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If No, Please Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medicare_COB_Options__c</fullName>
        <label>Medicare COB Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrap</fullName>
                </value>
                <value>
                    <fullName>Subsidy</fullName>
                </value>
                <value>
                    <fullName>Waiver</fullName>
                </value>
                <value>
                    <fullName>Carve-Out</fullName>
                </value>
                <value>
                    <fullName>Other (Please Explain)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_COB__c</fullName>
        <label>Medicare COB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_th__c</fullName>
        <label>More Than One Bill Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Option_E__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>No System Generated Letter Will Be Sent Out. COB Information Will Be Gathered Via Claims, Applications, And/Or Inquiries.</inlineHelpText>
        <label>Option E</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overage_dep_term_ltrs_be_mailed_to_sub__c</fullName>
        <label>Overage Dep Term Letters Mailed To Sub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Packages_Suffixes_COB_Method_Applies__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If No, Specify COB Method Per Package</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pay_and_Pursue__c</fullName>
        <inlineHelpText>The First Claim Will Pay And Generate The Questionnaire - Option A Every 12 Months, Option B Every 18 Months, And Option F Every 24 months. If No Response, All Subsequent Claims Will Pay And Will NOT Reject.</inlineHelpText>
        <label>Pay And Pursue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option A</fullName>
                </value>
                <value>
                    <fullName>Option B</fullName>
                </value>
                <value>
                    <fullName>Option F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pursue_and_Pay__c</fullName>
        <inlineHelpText>The First Claim Will Pay And Generate The Questionnaire - Option C Every 12 Months, Option D Every 18 Months, And Option G Every 24 Months. If No Response Claims Will Reject. Once A Response Has Been Received, Any Claims Will Be Adjusted Accordingly.</inlineHelpText>
        <label>Pursue And Pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option D</fullName>
                </value>
                <value>
                    <fullName>Option C</fullName>
                </value>
                <value>
                    <fullName>Option G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_Medicare__c</fullName>
        <label>Will Medicare Part D Benefits Be Offered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coordination of Benefits</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COB-{000000}</displayFormat>
        <label>COB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coordination of Benefits</pluralLabel>
    <recordTypes>
        <fullName>COBNASCO</fullName>
        <active>true</active>
        <label>COBNASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>COBWGS</fullName>
        <active>true</active>
        <label>COBWGS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>COB_VR01_Do_Not_Create_More</fullName>
        <active>false</active>
        <errorConditionFormula>Group__r.COB_Count__c &gt; 1</errorConditionFormula>
        <errorMessage>Please do not create another COB record when already one exists.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COB_method_required_conditionally</fullName>
        <active>true</active>
        <description>If no, specify COB method per package.</description>
        <errorConditionFormula>ISPICKVAL( COB_Method_Apply_to_all__c , &apos;No&apos;)&amp;&amp; ISBLANK( Packages_Suffixes_COB_Method_Applies__c )</errorConditionFormula>
        <errorDisplayField>Packages_Suffixes_COB_Method_Applies__c</errorDisplayField>
        <errorMessage>Please specify COB method per package if COB Method does not apply to all Packages/Suffix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Does_this_apply_No_then_explanation_req</fullName>
        <active>true</active>
        <description>If ‘Does this Apply to All Subgroups?’- No, then ‘If No, please explain’ should be required</description>
        <errorConditionFormula>ISPICKVAL( Does_this_Apply__c , &apos;No&apos;)&amp;&amp; 
ISBLANK( Medicare_Applies_to_Packages_Suffixes__c )</errorConditionFormula>
        <errorDisplayField>Medicare_Applies_to_Packages_Suffixes__c</errorDisplayField>
        <errorMessage>If Does this Apply to All Subgroups is &apos;No&apos;, please give the explanation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_ME_Too_per_package_required</fullName>
        <active>true</active>
        <description>If no, specify ME too per package.</description>
        <errorConditionFormula>ISPICKVAL(Does_Me_Too_selection_apply_to_all_pkgs__c , &apos;No&apos;)&amp;&amp; ISBLANK(If_no_please_specify_per_package_which_M__c)</errorConditionFormula>
        <errorDisplayField>If_no_please_specify_per_package_which_M__c</errorDisplayField>
        <errorMessage>Please specify ME Too per package if Me Too selection does not apply to all pkgs.</errorMessage>
    </validationRules>
</CustomObject>